--- a/app/views/rb_tasks/_task.html.erb
+++ b/app/views/rb_tasks/_task.html.erb
@@ -35,9 +35,9 @@ See doc/COPYRIGHT.rdoc for more details.
 ++#%>
 
 <% prevent_edit = User.current.allowed_to?(:update_tasks, defined?(project) ? project : task.project) ? '' : 'prevent_edit'%>
-<div class="model work_package task <%= color_contrast_class(task) %> <%= prevent_edit %> <%= mark_if_closed(task) %>" id="work_package_<%= task.id %>" <%= build_inline_style(task) %>>
+<div class="model work_package task <%= color_contrast_class(task) %> <%= prevent_edit %> <%= mark_if_closed(task) %> priority-<%= task.priority.name.downcase %>" id="work_package_<%= task.id %>" <%= build_inline_style(task) %>>
   <div class="d-flex align-items-center mb-5">
-    <span class="status status-testing">In testing</span>
+    <span class="status status-<%= task.status.name.split.join("-").downcase %>"><%= task.status.name %></span>
     <div class="task_type ml-auto"><%= image_tag task_type_icon(task)%></div>
     <div class="task_priority ml-5"><%= image_tag task_priority_icon(task)%></div>
   </div>
@@ -46,20 +46,20 @@ See doc/COPYRIGHT.rdoc for more details.
     <div class="v">#<%= id_or_empty(task) %></div>
   </div>
   <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= task.id %>><%= task.subject %></div>
-  <div class="date"> 
-    <div><span>Start Date</span> 13/01/19 </div>
-    <div><span>End Date</span> 27/01/19</div>
+  <div class="date">
+    <div><span>Start Date</span><%= task.start_date.present? ? task.start_date.strftime("%d/%m/%y") : '' %></div>
+    <div><span>End Date</span><%= task.due_date.present? ? task.due_date.strftime("%d/%m/%y") : '' %></div>
   </div>
-  
-  
-  
-  
+
+
+
+
   <div class="remaining_hours editable<%= ' empty' if remaining_hours(task).blank? %>" fieldname="remaining_hours"><%= remaining_hours(task) %></div>
-  
+
   <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= task.id %>>
     <div class="t"><%= assignee_name_or_empty(task) %></div>
     <div class="v"><%= assignee_id_or_empty(task) %></div>
-  </div>  
+  </div>
   <div class="indicator"> </div>
   <div class="meta">
     <div class="story_id"><%= task.parent_id %></div>
