hide side panel.

--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -201,7 +201,7 @@ See doc/COPYRIGHT.rdoc for more details.
 </div>
 
 
-<div class="aside-panel-outer offcanvas-open">
+<div class="aside-panel-outer offcanvas-open1">
   <div class="aside-panel aside-panel-first aside-panel-animate">
     <div class="aside-content px-30">
         <div class="aside-header d-flex justify-content-between align-items-center">
