--- a/app/views/rb_kanban_boards/show.html.erb
+++ b/app/views/rb_kanban_boards/show.html.erb
@@ -39,91 +39,82 @@ See doc/COPYRIGHT.rdoc for more details.
   <%= render :partial => 'shared/backlogs_header' %>
   <%= stylesheet_link_tag 'backlogs/taskboard.css' %>
 <% end %>
-<%= html_title @sprint.name %>
+<%#= html_title @sprint.name %>
 <!--  -->
-<%= toolbar title: @sprint.name do %> 
-
-  <li class="toolbar-item toolbar-input-group" id="col_width">
-    <div>
-      <label for="col_width_input"><%= l('backlogs.column_width') %></label>
-    </div>
-    <input type="text" id="col_width_input">
-  </li>
-    <li class="toolbar-item">
-     <%= link_to l(:label_kanban_board_edit),
-                  edit_project_kanban_board_path(@project.id,@sprint.id)
-                %>
-    </li>
+<%= toolbar title: @sprint.name do %>
 <% end %>
 
 <% breadcrumb_paths(link_to(l(:label_backlogs), backlogs_project_backlogs_path(@project)), link_to(@sprint.name, backlogs_project_backlogs_path(@sprint))) %>
 
 <div id='rb'>
-    <div id="taskboard" class="wp-work-wrapper">
-        <div id="wp-work" class="wp-work" style="height: 330px;">
-            <div id="wp-pool-column">
-                <div id="wp-pool" style="display: block; padding-top: 36px;">
-                    <div id="wp-column-header-group" class="wp-column-header-group wp-fixed">
-                        <ul id="wp-column-headers" class="wp-column-headers">                            
-                            <% @statuses.each do |status| %>
-                              <li class="wp-column">
-                                <div class="wp-column-header-flex">
-                                    <div class="wp-column-header-flex-1">
-                                      <h2><%= status.name %></h2>
-                                      </div>
-                                  </div>
-                              </li>
-                            <% end %>
-                        </ul>                        
+  <div id="taskboard" class="wp-work-wrapper">
+    <div id="wp-work" class="wp-work" style="height: 330px;">
+      <div id="wp-pool-column">
+        <div id="wp-pool" style="display: block; padding-top: 44px;">
+          <div id="wp-column-header-group" class="wp-column-header-group wp-fixed">
+            <ul id="wp-column-headers" class="wp-column-headers">
+              <% @statuses.each do |status| %>
+                <li class="wp-column">
+                  <div class="wp-column-header-flex">
+                    <div class="wp-column-header-flex-1">
+                      <h2><%= status.name %></h2>
                     </div>
-                       
-                    <% if @sprint.project && @sprint.work_packages.present? %>
-                      <% @sprint.work_packages.each do |story| %>
-                      <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">                   
-                          <div class="wp-swimlane-header <%= @project.is_multi_kanban ? 'story-hide' : '' %>">                          
-                            <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
+                  </div>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+          <% @statuses_rmv = [] %>
+          <% if @sprint.project && @sprint.work_packages.present? %>
+            <% @sprint.work_packages.each do |story| %>
+              <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">
+                <div class="wp-swimlane-header <%= @project.is_multi_kanban ? 'story-hide' : '' %>">
+                  <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
                                 <span class="wp-swimlane-avatar">
                                 <%= image_tag task_type_icon(story), class: "" %>
                                 </span>
-                                
-                                <%= work_package_link_or_empty(story) %>
-                                <span class="wp-info">
+
+                    <%= work_package_link_or_empty(story) %>
+                    <span class="wp-info">
                                     <span class="aui-lozenge"><%= story.status.name %></span>
                                 </span>
-                                <span class="wp-summary"> 
+                    <span class="wp-summary">
                                     <%= story.subject %>
                                 </span>
-                            </div>
-                          </div>
-
-                          <div id="tasks">     
-                            <ul class="wp-columns">       
-                                <% @statuses.each do |status| %>
-                                    <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
-                                      <%= render :partial => "rb_tasks/task",
-                                              :collection => @sprint.work_packages.select { |task| task.status.id == status.id } %>
-                                  </li>
-
-                                 <% end %> 
-                              </ul>
-                          </div>
-                      </div>
-                    <% end %>
-                    <% else %>
-                         <div class="no-data">
-                            <div class="no-data-content">
-                              <span class="no-data-img"></span>
-                              <span class="no-data-title">There are no tasks for this board</span>
-                            </div>
-                        </div>
-                    <% end %>
+                  </div>
                 </div>
+
+                <div id="tasks">
+                  <ul class="wp-columns">
+                    <% @statuses.each do |status| %>
+
+                      <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
+                        <% if story.status.id == status.id%>
+                          <%= render :partial => "rb_tasks/task",
+                                     :locals => { :task => story}  %>
+                        <% end %>
+                      </li>
+
+                    <% end %>
+                  </ul>
+                </div>
+              </div>
+            <% end %>
+          <% else %>
+            <div class="no-data">
+              <div class="no-data-content">
+                <span class="no-data-img"></span>
+                <span class="no-data-title">There are no tasks for this board</span>
+              </div>
             </div>
+          <% end %>
         </div>
-    </div> 
-  
-  
-  
+      </div>
+    </div>
+  </div>
+
+
+
 
   <div id="helpers">
     <select class="assigned_to_id template" id="assigned_to_id_options">
