changes in kanban bord panel.

--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -664,3 +664,11 @@ aui-badge
   border-left: 3px solid #5ABE2B
 .task-low-priority
   border-left: 3px solid #FFB354
+
+.new-kanban
+  p
+    font-size: 14px
+    color: #868686
+  select
+    height: 42px
+    padding: 0.625rem
