--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -159,7 +159,7 @@ See doc/COPYRIGHT.rdoc for more details.
         <div class="close-btn close-panel-btn"><a href="javascript:void(0)"><em class="icon icon-close d-block"></em></a></div>
       </div>
       <div class="aside-body create-news py-20">
-        <h4 class="m-0">Select the workflow where the Kanban belongs.</h4>
+        <p class="mb-20">Select the workflow where the Kanban belongs.</p>
         <%= labelled_tabular_form_for [@project, @kanban_board], html: { id: 'news-form' } do |f| %>
           <%= render partial: 'kanban_boards/form', locals: { f: f } %>
           <div class="aside-footer text-right">
