--- a/app/views/rb_tasks/_task.html.erb
+++ b/app/views/rb_tasks/_task.html.erb
@@ -35,7 +35,7 @@ See doc/COPYRIGHT.rdoc for more details.
 ++#%>
 
 <% prevent_edit = User.current.allowed_to?(:update_tasks, defined?(project) ? project : task.project) ? '' : 'prevent_edit'%>
-<div class="model work_package task <%= color_contrast_class(task) %> <%= prevent_edit %> <%= mark_if_closed(task) %> priority-<%= task.priority.name.downcase %>" id="work_package_<%= task.id %>" <%= build_inline_style(task) %>>
+<div class="model work_package task <%= color_contrast_class(task) %> <%= prevent_edit %> <%= mark_if_closed(task) %>" id="work_package_<%= task.id %>" <%= build_inline_style(task) %>>
   <div class="d-flex align-items-center mb-5">
     <span class="status status-<%= task.status.name.split.join("-").downcase %>"><%= task.status.name %></span>
     <div class="task_type ml-auto"><%= image_tag task_type_icon(task)%></div>
