--- a/app/views/shared/_server_variables.js.erb
+++ b/app/views/shared/_server_variables.js.erb
@@ -35,7 +35,7 @@ See doc/COPYRIGHT.rdoc for more details.
 ++#%>
 
 RB.constants = {
-  project_id: <%= @project.id %>,
+  project_id: <%= @project ? @project.id: "null" %>,
   sprint_id: <%= @sprint ? @sprint.id : "null" %>
 };
 
@@ -52,7 +52,8 @@ RB.urlFor = (function () {
     update_story: '<%= backlogs_project_sprint_story_path(:project_id => @project.identifier, :sprint_id => ":sprint_id", :id => ":id") %>',
 
     create_task: '<%= backlogs_project_sprint_tasks_path(:project_id => @project.identifier, :sprint_id => ":sprint_id") %>',
-    update_task: '<%= backlogs_project_sprint_task_path(:project_id => @project.identifier, :sprint_id => ":sprint_id", :id => ":id") %>',
+    update_task: '<%= update_task_backlogs_project_kanban_board_task_path(:project_id => @project.identifier, :kanban_board_id => ":sprint_id", :id => ":id") %>',
+
 
     create_impediment: '<%= backlogs_project_sprint_impediments_path(:project_id => @project.identifier, :sprint_id => ":sprint_id") %>',
     update_impediment: '<%= backlogs_project_sprint_impediment_path(:project_id => @project.identifier, :sprint_id => ":sprint_id", :id => ":id") %>',
@@ -65,7 +66,7 @@ RB.urlFor = (function () {
 
     if (options){
       if (options.id) {
-        route = route.replace(":id", options.id);
+        route = route.replace(":id", options.id.replace(/[^a-zA-Z1-9 ]/g, ""));
       }
       if (options.project_id){
         route = route.replace(":project_id", options.project_id);
